--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -21,7 +21,7 @@ jobs:
 
 
       - name: Declare Merkely Pipeline
-        run: >
+        run: |-
           docker run --rm
               --env MERKELY_COMMAND=declare_pipeline
               --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }}
