--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -21,12 +21,11 @@ jobs:
 
 
       - name: Declare Merkely Pipeline
-        run: |
-          docker run --rm \
-              --env MERKELY_COMMAND=declare_pipeline \
-              --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
-              --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
-              merkely/change
+        uses: docker://merkely/change:latest
+        env:
+          MERKELY_COMMAND: declare_pipeline
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          MERKELY_PIPE_PATH: ${PWD}/Merkelypipe.json
 
 
       - name: Build and Publish Docker Image
