--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -40,20 +40,13 @@ jobs:
 
 
       - name: Log Docker Image in Merkely
-        run: |
-          docker run \
-              --env MERKELY_COMMAND=log_artifact \
-              --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
-              --env MERKELY_IS_COMPLIANT=TRUE \
-              --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
-              --env GITHUB_SERVER_URL \
-              --env GITHUB_REPOSITORY \
-              --env GITHUB_SHA \
-              --env GITHUB_RUN_ID \
-              --rm \
-              --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
-              --volume /var/run/docker.sock:/var/run/docker.sock \
-              merkely/change
+        uses: docker://merkely/change:latest
+        env:
+          MERKELY_COMMAND: log_artifact
+          MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
+          MERKELY_IS_COMPLIANT: "TRUE"
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          MERKELY_PIPE_PATH: /github/workspace/Merkelypipe.json
 
 
       - name: Run unit tests and log results in Merkely
