Fix MERKELY_TEST_RESULTS_DIR by passing a dir not a file in .github/workflows/master_pipeline.yml

--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -60,12 +60,6 @@ jobs:
           docker cp container:/code/build/test/ ${PWD}/build
           docker rm container
 
-      - name: See if pytest_unit.xml is visible
-        run: |
-          pwd
-          ls -al
-          cd build/test
-          ls -al
 
       - name: Log unit test results in Merkely
         uses: docker://merkely/change:latest
@@ -73,7 +67,7 @@ jobs:
           MERKELY_COMMAND: log_test
           MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
           MERKELY_EVIDENCE_TYPE: unit_test
-          MERKELY_TEST_RESULTS_DIR: /github/workspace/build/test/pytest_unit.xml
+          MERKELY_TEST_RESULTS_DIR: /github/workspace/build/test
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: /github/workspace/Merkelypipe.json
 
