--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           MERKELY_COMMAND: declare_pipeline
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
-          MERKELY_PIPE_PATH: ${{ env.GITHUB_WORKSPACE }}/Merkelypipe.json
+          MERKELY_PIPE_PATH: /github/workspace/Merkelypipe.json
 
 
       - name: Build and Publish Docker Image
@@ -46,7 +46,7 @@ jobs:
           MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
           MERKELY_IS_COMPLIANT: "TRUE"
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
-          MERKELY_PIPE_PATH: ${{ env.GITHUB_WORKSPACE }}/Merkelypipe.json
+          MERKELY_PIPE_PATH: /github/workspace/Merkelypipe.json
 
 
       - name: Run unit tests
@@ -57,7 +57,7 @@ jobs:
               --entrypoint ./entrypoint-unit_test.sh \
               ${{ env.TAGGED_IMAGE }}
           mkdir -p build/test
-          docker cp container:/code/build/test/ ${{ env.GITHUB_WORKSPACE }}/build
+          docker cp container:/code/build/test/ /github/workspace/build
           docker rm container
 
 
@@ -67,16 +67,14 @@ jobs:
           MERKELY_COMMAND: log_test
           MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
           MERKELY_EVIDENCE_TYPE: unit_test
-          MERKELY_TEST_RESULTS_DIR: ${GITHUB_WORKSPACE}/build/test
+          MERKELY_TEST_RESULTS_DIR: /github/workspace/build/test
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
-          MERKELY_PIPE_PATH: ${{ env.GITHUB_WORKSPACE }}/Merkelypipe.json
+          MERKELY_PIPE_PATH: /github/workspace/Merkelypipe.json
 
 
-      - name: Run security analysis and log results in Merkely
-        env:
-          SECURITY_RESULTS_FILE: build/security/security.xml
+      - name: Run security analysis
         run: |
-          # Run the bandit security, write results directly to build/security/security.xml
+          # Run bandit security. Write results to ./build/security/
           mkdir -p build/security
           docker run \
                   --rm \
@@ -84,21 +82,17 @@ jobs:
                   --entrypoint ./entrypoint-security.sh \
                   ${{ env.TAGGED_IMAGE }}
 
-          # Log security results in Merkely
-          docker run \
-              --env MERKELY_COMMAND=log_test \
-              --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
-              --env MERKELY_EVIDENCE_TYPE=security \
-              --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
-              --env GITHUB_SERVER_URL \
-              --env GITHUB_REPOSITORY \
-              --env GITHUB_RUN_ID \
-              --rm \
-              --volume ${PWD}/${SECURITY_RESULTS_FILE}:/data/junit/junit.xml \
-              --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
-              --volume /var/run/docker.sock:/var/run/docker.sock \
-              merkely/change
 
+      - name: Log security results in Merkely
+        uses: docker://merkely/change:latest
+        env:
+          MERKELY_COMMAND: log_test
+          MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
+          MERKELY_EVIDENCE_TYPE: security
+          MERKELY_TEST_RESULTS_DIR: /github/workspace/build/security
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          MERKELY_PIPE_PATH: /github/workspace/Merkelypipe.json
+          
 
       - name: Run coverage and log results in Merkely
         run: |
