Add missing left-curly-brace in .github/workflows/master_pipeline.yml

--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -89,7 +89,7 @@ jobs:
           MERKELY_COMMAND: log_test
           MERKELY_FINGERPRINT: docker://${{ env.TAGGED_IMAGE }}
           MERKELY_EVIDENCE_TYPE: security
-          MERKELY_TEST_RESULTS_DIR: ${ github.workspace }}/build/security
+          MERKELY_TEST_RESULTS_DIR: ${{ github.workspace }}/build/security
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
