--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -23,9 +23,11 @@ jobs:
         fetch-depth: 0
         ref: ${{ github.event.inputs.deploy_commit }}
 
+
     - name: Make Docker image name available for following steps
       run: |
-        echo "TAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
+        echo "IMAGE_TAGGED=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
+
 
     - name: Deploy to production
       run: |
@@ -33,7 +35,7 @@ jobs:
 
         docker run \
             --env MERKELY_COMMAND=control_deployment \
-            --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
+            --env MERKELY_FINGERPRINT=docker://${{ env.IMAGE_TAGGED }} \
             --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
             --rm \
             --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
@@ -44,7 +46,7 @@ jobs:
 
         docker run \
             --env MERKELY_COMMAND=log_deployment \
-            --env MERKELY_FINGERPRINT=docker://${{ env.TAGGED_IMAGE }} \
+            --env MERKELY_FINGERPRINT=docker://${{ env.IMAGE_TAGGED }} \
             --env MERKELY_DESCRIPTION="Deployed to production in pipeline" \
             --env MERKELY_ENVIRONMENT=production \
             --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
