--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and Publish Docker Image
         run: |
           docker build --file ${PWD}/Dockerfile --tag ${{ env.TAGGED_IMAGE }} ${PWD}
-          docker tag ${{ env.TAGGED_IMAGE }} ${{ env.LATEST_IMAGE }}
+          docker tag ${{ env.IMAGE_TAGGED }} ${{ env.IMAGE_LATEST }}
 
           echo ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }} | docker login --username ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }} --password-stdin
 
