--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -12,9 +12,7 @@ jobs:
 
     # This is a manually triggered workflow to deploy to production
     # Runs from production branch
-    # Do deploy
-    # Log deploy
-    # Merge with master
+    # Do deploy, Log deploy, Merge with master
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
