--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Deploy to production
       run: |
-        docker pull ${{ env.TAGGED_IMAGE }}
+        docker pull ${{ env.IMAGE_TAGGED }}
 
         docker run \
             --env MERKELY_COMMAND=control_deployment \
