Make MERKELY_OWNER and MERKELY_PIPELINE github secrets so they only need to be edited once to be visible in all three github pipelines

--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -14,15 +14,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Make Merkely owner available for following steps
-        run: |
-          echo "MERKELY_OWNER=compliancedbb" >> ${GITHUB_ENV}
-
-
-      - name: Make name of Merkely pipeline available for following steps
-        run: |
-          echo "MERKELY_PIPELINE=loancalculator" >> ${GITHUB_ENV}
-
 
       - name: Make Docker image names available for following steps
         run: |
@@ -34,8 +25,8 @@ jobs:
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: declare_pipeline
-          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
+          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
@@ -53,10 +44,10 @@ jobs:
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: log_artifact
-          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
           MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
           MERKELY_IS_COMPLIANT: "TRUE"
+          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
@@ -77,11 +68,11 @@ jobs:
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: log_test
-          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
           MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
           MERKELY_EVIDENCE_TYPE: unit_test
           MERKELY_TEST_RESULTS_DIR: ${{ github.workspace}}/build/test
+          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
@@ -101,11 +92,11 @@ jobs:
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: log_test
-          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
           MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
           MERKELY_EVIDENCE_TYPE: security
           MERKELY_TEST_RESULTS_DIR: ${{ github.workspace }}/build/security
+          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
@@ -127,12 +118,12 @@ jobs:
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: log_evidence
-          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
           MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
           MERKELY_EVIDENCE_TYPE: coverage
           MERKELY_IS_COMPLIANT: "TRUE"
           MERKELY_DESCRIPTION: ${{ env.COVERAGE_SUMMARY }}
+          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
@@ -146,10 +137,10 @@ jobs:
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: log_deployment
-          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
           MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
           MERKELY_DESCRIPTION: "Deployed to staging in pipeline"
           MERKELY_ENVIRONMENT: staging
+          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
