--- a/.github/workflows/request_approval.yml
+++ b/.github/workflows/request_approval.yml
@@ -35,6 +35,8 @@ jobs:
             --env MERKELY_NEWEST_SRC_COMMITISH=${{ github.event.inputs.deploy_commit }} \
             --env MERKELY_DESCRIPTION="Approval created by ${GITHUB_ACTOR} on github" \
             --env MERKELY_IS_APPROVED=TRUE \
+            --env MERKELY_OWNER=$${ secrets.MERKELY_OWNER }} \
+            --env MERKELY_PIPELINE=$${ secrets.MERKELY_PIPELINE }} \
             --env MERKELY_API_TOKEN=${{ secrets.MERKELY_API_TOKEN }} \
             --rm \
             --volume=/var/run/docker.sock:/var/run/docker.sock \
