--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Add MERKELY_OWNER and MERKELY_PIPELINE to GITHUB_ENV
+        run: |
+          cat .github/merkely.env >> ${GITHUB_ENV}
+
 
       - name: Make Docker image names available for following steps
         run: |
@@ -25,8 +29,8 @@ jobs:
         uses: docker://merkely/change:latest
         env:
           MERKELY_COMMAND: declare_pipeline
-          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
+          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
@@ -46,8 +50,8 @@ jobs:
           MERKELY_COMMAND: log_artifact
           MERKELY_FINGERPRINT: docker://${{ env.IMAGE_TAGGED }}
           MERKELY_IS_COMPLIANT: "TRUE"
-          MERKELY_OWNER: $${ secrets.MERKELY_OWNER }}
-          MERKELY_PIPELINE: $${ secrets.MERKELY_PIPELINE }}
+          MERKELY_OWNER: $${ env.MERKELY_OWNER }}
+          MERKELY_PIPELINE: $${ env.MERKELY_PIPELINE }}
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
           MERKELY_PIPE_PATH: ${{ github.workspace }}/Merkelypipe.json
 
